# Code_modle

./: Harbor.md  README.md  cuda.md  docker涉及的环境变量.md  hello.txt  index.md  k8s安装使用.md  kvm安装.md  os_modle.py  proxy.md  python_modle.py  ubuntu远程桌面.md  阿里k8s.md
C++/: cmake资料.md
C++自动化测试/: CMakeLists.txt  run.sh
C++自动化测试/include/: demo.h
C++自动化测试/src/: demo.cpp  test.cpp
C++自动化测试/testcase/: input.csv
HTML_code/: HTML资料.md  index.html
Linux_code/: linux.sh  shell常见语法.md
Python_code/: READEME.md  os_modle.py
SIMD/AVX/: README.md
SIMD/openmp/: CMakeLists.txt  READEME.md  openmp_test1.cpp
c++/: c++笔记.md  gdb调试篇.md  opencv.md  宝典.md  算法题.md  问题.md  面试.md
c++/src/: Magnitude.cpp  ipp.cpp  phase.cpp  single.cpp
cuda/: CMakeLists.txt  cuda.md  test1.cu
go/: first.md
opencv_pyhon_c/: READEME.md  opencv.ipynb
tool/MobaXterm/: MobaXterm.ini
visual_studio/: READEME.md
张量流/: mnist_tensorlfow.py  new.ipynb
消息中间件/: READEME.md
算法题/: code.cpp  code.py
